k8s-dev1-comghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  name: frontend-portal-deployment
  annotations:
    kubernetes.io/change-cause: "Initialized by manifest files."
  labels:
    env: production
    tier: frontend
    app: portal
    name: frontend-portal-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      env: production
      tier: frontend
      app: portal
      name: frontend-portal-pod
  template:
    metadata:
      labels:
        env: production
        tier: frontend
        app: portal
        name: frontend-portal-pod
    spec:
      containers:
        - name: frontend-portal
          image: overpassion/egovframe-msa-frontend-portal:k8s-i66 # TODO
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
